[project]
name = "dou-utils"
version = "0.1.3"
description = "The utility package of Dou Inc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "loguru>=0.7.2", "pydantic>=2.10.2", "toml>=0.10.2", "typer>=0.14.0",]

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [ "pre-commit>=4.0.1", "ruff>=0.8.1", "setuptools>=75.6.0", "wheel>=0.45.1",]

[project.scripts]
dou = "dou.cli:app"

[tool.setuptools]
py-modules = [ "dou",]

[tool.ruff]
exclude = [ ".bzr", ".direnv", ".eggs", ".git", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [ "E4", "E7", "E9", "F",]
ignore = []
fixable = [ "ALL",]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
